--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap');
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -6,6 +8,7 @@ nav a {
     text-align: center;
     color: black;
     text-decoration: none;
+    padding: 35px;
 }
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
@@ -21,7 +24,11 @@ main section {
     background-color: #F6BDD1;
 }
 body {
+    font-family: Poppins, Helvetica, sans-serif;
     background-color: #5465FF;
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
 }
 header {
     background-color: #77F0EA;
@@ -34,6 +41,10 @@ nav a:hover {
     background-color: #77F0EA;
     color: black;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: #5465FF;
@@ -41,24 +52,34 @@ nav a:hover {
 }
 .msg {
     background-color: #F6BDD1;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer {
     background-color: #77F0EA;
 }
 .home-title {
     color: black;
+    font-family: "Inter";
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4 {
     color: white;
 }
 .msg h2 {
     color: black;
+    font-family: "Inter";
 }
 .msg p {
     color: black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer {
     color: black;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a {
     color: black;
@@ -72,6 +93,7 @@ footer a:hover {
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%;
@@ -81,4 +103,22 @@ footer p {
 }
 footer p a:hover {
     text-decoration: underline;
+}
+h2 {
+    margin: 0;
+}
+#logo_link {
+    padding-top: 5px;
+}
+footer .social img {
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid black;
+}
+main seciton img {
+    box-sizing: border-box;
 }
