--- a/khmerstories/styles/site-plan.css
+++ b/khmerstories/styles/site-plan.css
@@ -5,14 +5,14 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #EF2917   ;
+  --secondary-color: #368FD3 ;
+  --accent1-color: #0B3954;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Verdana";
+  --paragraph-font: Arial, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
