--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -26,7 +26,7 @@ main section {
     grid-row: 4/9;
 }
 body {
-    font-family: Poppins, Helvetica, sans-serif;
+    font-family: 'Poppins', Helvetica, sans-serif;
     background-color: #5465FF;
     font-size: 22px;
     padding: 0;
@@ -162,6 +162,10 @@ nav {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
+.rivers-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 .card-img, .mountains {
     width: 100%;
 }
@@ -186,6 +190,23 @@ nav {
 .card-img:hover {
     opacity: .6;
     transform: scale(1.1);
+}
+.river-img {
+    grid-column: 1/3;
+    width: 100%;
+    height: 100%;
+}
+.salmon {
+    padding-right: 25px;
+    text-align: left;
+}
+.canyon {
+    padding-left: 25px;
+    padding-right: 25px;
+    text-align: left;
+}
+.salmon h1, .canyon h1 {
+    color: #77F0EA;
 }
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
