--- a/khmerstories/styles/site-plan.css
+++ b/khmerstories/styles/site-plan.css
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Verdana";
-  --paragraph-font: Arial, Helvetica, sans-serif;
+  --heading-font: "Tahoma";
+  --paragraph-font: 'Roboto', Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
@@ -20,8 +20,8 @@ Fonts are separated by a | */
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --nav-link-color: white;
+  --nav-background-color: #368FD3;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #396E94;
 }
